fix mario jump timing

--- a/assets/style/tic-tac-toe.css
+++ b/assets/style/tic-tac-toe.css
@@ -47,116 +47,12 @@ td button, td img, td span {
 }
 
 
-
-.mario {
-	height: 102px;
-	width: 102px;
-	background-image: url(assets/images/Mario-Box-question-mark.gif);
-	background-size: 100px 100px;
-	font-size: 20px;
-	color: white;
-	animation: bounce 0.3s linear;
-
-
-}
-
-
 .normalContainer {
 	position: absolute;
 	left: 60px;
 	top: 200px;
 }
 
-.marioContainer {
-	position: absolute;
-	left: 339px;
-	top: 240px;
-}
-
-.superMario {
-	
-	height: 102px;
-	width: 100px;
-	position: absolute;
-	left: 10px;
-	display: inline-block;
-	top: 650px;
-	animation: jump 1.2s linear;
-	
-
-
-}
-
-.marioCoin {
-	position: absolute;
-	left: 350px;
-	display: inline-block;
-	height: 74px;
-	width: 70px;
-	animation: coinUp 0.5s linear;
-	top: 650px;
-}
-
-@keyframes bounce {
-  from, 20%, 53%, 80%, 100% {
-    -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
-  }
-
-  40%, 43% {
-    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -30px, 0);
-    transform: translate3d(0, -30px, 0);
-  }
-
-  70% {
-    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    -webkit-transform: translate3d(0, -15px, 0);
-    transform: translate3d(0, -15px, 0);
-  }
-
-  90% {
-    -webkit-transform: translate3d(0,-4px,0);
-    transform: translate3d(0,-4px,0);
-  }
-}
-
-
-@keyframes jump {
-    0%  { 	
-    		left: -15%;
-    		top: 100%;  }
-    50%	{
-			left: 53%;
-			top: 50%;
-    					}
-    100% { 	left: 100%;
-    		top: 100%;
-    		opacity: 1;    }
-}
-
-@keyframes coinUp {
-	0%	{ 	top: 30%;
-			left: 56%;
-			opacity: 0; 	}
-	50% {
-			top: 30%;
-			left: 56%;
-			opacity: 0;
-							}
-	51%	{ 	top: 30%;
-			left: 56%;
-			opacity: 1;
-			 }
-	100% {	top: 10%;
-			left: 56%;
-
-				}
-}
 
 
 .normal {
